Create new commit

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jot-note-taker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dc-devrex.github.io/",
+  "homepage": "https://dc-devrex.github.io/jot-note-taker/",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
